--- a/css/hackprojects.css
+++ b/css/hackprojects.css
@@ -1,4 +1,4 @@
-.cards{
+.hackcards{
     --background-color: #18181b;
     --text-color: #a1a1aa;
     --card-background-color: rgba(255, 255, 255, .015);
@@ -69,33 +69,41 @@
     z-index: 1;
   }
   
-  
-  .card {
+  .projects_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 50px;
+  }
+  .hackcard {
     text-align: center;
     background-color: var(--background-color);
     box-shadow: 0px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
       border-radius: 2.5rem;
-  
+    width: 350px;
+    height: 250px;
     padding: 25px 0px 3.9rem 12px;
     cursor: pointer;
     position: relative;
     transition: box-shadow 0.25s;
     max-width: 43rem;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
   }
-  .card::before {
+  .hackcard::before {
     content: '';
     position: absolute;
     inset: 0;
     border-radius: 15px;
     background-color: var(--card-background-color);
   }
-  .card .icon {
+  .hackcard .icon {
     z-index: 2;
     position: relative;
     display: table;
     padding: 8px;
   }
-  .card .icon::after {
+  .hackcard .icon::after {
     content: '';
     position: absolute;
     inset: 4.5px;
@@ -105,7 +113,7 @@
     backdrop-filter: blur(2px);
     transition: background-color 0.25s, border-color 0.25s;
   }
-  .card .icon svg {
+  .hackcard .icon svg {
     position: relative;
     z-index: 1;
     display: block;
@@ -115,7 +123,7 @@
     color: var(--card-icon-color);
     transition: color 0.25s;
   }
-  .card h4 {
+  .hackcard h4 {
     z-index: 2;
     position: relative;
     margin: 12px 0 4px 0;
@@ -125,15 +133,16 @@
     line-height: 2;
     color: var(--card-label-color);
   }
-  .card p {
+  .hackcard p {
     z-index: 2;
     position: relative;
     margin: 0;
     font-size: 14px;
     line-height: 1.7;
     color: var(--text-color);
+    
   }
-  .card .shine {
+  .hackcard .shine {
     border-radius: inherit;
     position: absolute;
     inset: 0;
@@ -142,7 +151,7 @@
     opacity: 0;
     transition: opacity 0.5s;
   }
-  .card .shine:before {
+  .hackcard .shine:before {
     content: '';
     width: 150%;
     padding-bottom: 150%;
@@ -155,7 +164,7 @@
     transform: translateX(-50%);
     background-image: var(--card-shine-gradient);
   }
-  .card .background {
+  .hackcard .background {
     border-radius: inherit;
     position: absolute;
     inset: 0;
@@ -163,81 +172,81 @@
     -webkit-mask-image: radial-gradient(circle at 60% 5%, black 0%, black 15%, transparent 60%);
     mask-image: radial-gradient(circle at 60% 5%, black 0%, black 15%, transparent 60%);
   }
-  .card .background .tiles {
+  .hackcard .background .tiles {
     opacity: 0;
     transition: opacity 0.25s;
   }
-  .card .background .tiles .tile {
+  .hackcard .background .tiles .tile {
     position: absolute;
     background-color: var(--card-tile-color);
     animation-duration: 8s;
     animation-iteration-count: infinite;
     opacity: 0;
   }
-  .card .background .tiles .tile.tile-4, .card .background .tiles .tile.tile-6, .card .background .tiles .tile.tile-10 {
+  .hackcard .background .tiles .tile.tile-4, .hackcard .background .tiles .tile.tile-6, .hackcard .background .tiles .tile.tile-10 {
     animation-delay: -2s;
   }
-  .card .background .tiles .tile.tile-3, .card .background .tiles .tile.tile-5, .card .background .tiles .tile.tile-8 {
+  .hackcard .background .tiles .tile.tile-3, .hackcard .background .tiles .tile.tile-5, .hackcard .background .tiles .tile.tile-8 {
     animation-delay: -4s;
   }
-  .card .background .tiles .tile.tile-2, .card .background .tiles .tile.tile-9 {
+  .hackcard .background .tiles .tile.tile-2, .hackcard .background .tiles .tile.tile-9 {
     animation-delay: -6s;
   }
-  .card .background .tiles .tile.tile-1 {
+  .hackcard .background .tiles .tile.tile-1 {
     top: 0;
     left: 0;
     height: 10%;
     width: 22.5%;
   }
-  .card .background .tiles .tile.tile-2 {
+  .hackcard .background .tiles .tile.tile-2 {
     top: 0;
     left: 22.5%;
     height: 10%;
     width: 27.5%;
   }
-  .card .background .tiles .tile.tile-3 {
+  .hackcard .background .tiles .tile.tile-3 {
     top: 0;
     left: 50%;
     height: 10%;
     width: 27.5%;
   }
-  .card .background .tiles .tile.tile-4 {
+  .hackcard .background .tiles .tile.tile-4 {
     top: 0;
     left: 77.5%;
     height: 10%;
     width: 22.5%;
   }
-  .card .background .tiles .tile.tile-5 {
+  .hackcard .background .tiles .tile.tile-5 {
     top: 10%;
     left: 0;
     height: 22.5%;
     width: 22.5%;
   }
-  .card .background .tiles .tile.tile-6 {
+  .hackcard .background .tiles .tile.tile-6 {
     top: 10%;
     left: 22.5%;
     height: 22.5%;
     width: 27.5%;
   }
-  .card .background .tiles .tile.tile-7 {
+  .hackcard .background .tiles .tile.tile-7 {
     top: 10%;
     left: 50%;
     height: 22.5%;
     width: 27.5%;
   }
-  .card .background .tiles .tile.tile-8 {
+  .hackcard .background .tiles .tile.tile-8 {
     top: 10%;
     left: 77.5%;
     height: 22.5%;
     width: 22.5%;
   }
-  .card .background .tiles .tile.tile-9 {
+  .hackcard .background .tiles .tile.tile-9 {
     top: 32.5%;
     left: 50%;
     height: 22.5%;
     width: 27.5%;
   }
-  .card .background .tiles .tile.tile-10 {
+  .hackcard .background .tiles .tile.tile-10 {
     top: 32.5%;
     left: 77.5%;
     height: 22.5%;
@@ -251,95 +260,95 @@
       opacity: 0;
    }
   }
-  .card .background .line {
+  .hackcard .background .line {
     position: absolute;
     inset: 0;
     opacity: 0;
     transition: opacity 0.35s;
   }
-  .card .background .line:before, .card .background .line:after {
+  .hackcard .background .line:before, .hackcard .background .line:after {
     content: '';
     position: absolute;
     background-color: var(--card-line-color);
     transition: transform 0.35s;
   }
-  .card .background .line:before {
+  .hackcard .background .line:before {
     left: 0;
     right: 0;
     height: 1px;
     transform-origin: 0 50%;
     transform: scaleX(0);
   }
-  .card .background .line:after {
+  .hackcard .background .line:after {
     top: 0;
     bottom: 0;
     width: 1px;
     transform-origin: 50% 0;
     transform: scaleY(0);
   }
-  .card .background .line.line-1:before {
+  .hackcard .background .line.line-1:before {
     top: 10%;
   }
-  .card .background .line.line-1:after {
+  .hackcard .background .line.line-1:after {
     left: 22.5%;
   }
-  .card .background .line.line-1:before, .card .background .line.line-1:after {
+  .hackcard .background .line.line-1:before, .hackcard .background .line.line-1:after {
     transition-delay: 0.3s;
   }
-  .card .background .line.line-2:before {
+  .hackcard .background .line.line-2:before {
     top: 32.5%;
   }
-  .card .background .line.line-2:after {
+  .hackcard .background .line.line-2:after {
     left: 50%;
   }
-  .card .background .line.line-2:before, .card .background .line.line-2:after {
+  .hackcard .background .line.line-2:before, .hackcard .background .line.line-2:after {
     transition-delay: 0.15s;
   }
-  .card .background .line.line-3:before {
+  .hackcard .background .line.line-3:before {
     top: 55%;
   }
-  .card .background .line.line-3:after {
+  .hackcard .background .line.line-3:after {
     right: 22.5%;
   }
-  .card:hover {
+  .hackcard:hover {
     box-shadow: 0px 3px 6px var(--card-hover-box-shadow-1), 0px var(--card-hover-box-shadow-2-y) var(--card-hover-box-shadow-2-blur) var(--card-hover-box-shadow-2), 0 0 0 1px var(--card-hover-border-color);
   }
-  .card:hover .icon::after {
+  .hackcard:hover .icon::after {
     background-color: var(--card-hover-icon-background-color);
     border-color: var(--card-hover-icon-border-color);
   }
-  .card:hover .icon svg {
+  .hackcard:hover .icon svg {
     color: var(--card-hover-icon-color);
   }
-  .card:hover .shine {
+  .hackcard:hover .shine {
     opacity: 1;
     transition-duration: 0.5s;
     transition-delay: 0s;
   }
-  .card:hover .background .tiles {
+  .hackcard:hover .background .tiles {
     opacity: 1;
     transition-delay: 0.25s;
   }
-  .card:hover .background .tiles .tile {
+  .hackcard:hover .background .tiles .tile {
     animation-name: tile;
   }
-  .card:hover .background .line {
+  .hackcard:hover .background .line {
     opacity: 1;
     transition-duration: 0.15s;
   }
-  .card:hover .background .line:before {
+  .hackcard:hover .background .line:before {
     transform: scaleX(1.5);
   }
-  .card:hover .background .line:after {
+  .hackcard:hover .background .line:after {
     transform: scaleY(1.6);
   }
-  .card:hover .background .line.line-1:before, .card:hover .background .line.line-1:after {
+  .hackcard:hover .background .line.line-1:before, .hackcard:hover .background .line.line-1:after {
     transition-delay: 0s;
   }
-  .card:hover .background .line.line-2:before, .card:hover .background .line.line-2:after {
+  .hackcard:hover .background .line.line-2:before, .hackcard:hover .background .line.line-2:after {
     transition-delay: 0.15s;
   }
-  .card:hover .background .line.line-3:before, .card:hover .background .line.line-3:after {
+  .hackcard:hover .background .line.line-3:before, .hackcard:hover .background .line.line-3:after {
     transition-delay: 0.3s;
   }
   .day-night {
@@ -425,10 +434,12 @@
   margin-bottom: 1rem;
   margin-top: 1rem;
   }
+
   .githubbtn:hover {
     /* Your button hover styles... */
+    color: white;
     transform: scale(1.05) !important;
-    background: rgba(7, 58, 229, 0.7) !important;
+    background: rgba(35, 71, 189, 0.7) !important;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37) !important;
     backdrop-filter: blur(9px) !important;
     -webkit-backdrop-filter: blur(9px) !important;
@@ -438,15 +449,21 @@
 
 
   @media screen and (max-width: 768px) {
-    .grid1 {
+    /* .grid1 {
       grid-template-columns: 1fr; /* Change to a single column layout */
-    }
-
     
-   .cards{
+
+    .projects_container{
+      grid-template-columns: 1fr;
+    }
+    body{
+      width: 100vw;
+    }
+    
+   .hackcards{
     margin: 0 auto;
    }
-    .card {
+    .hackcard {
       margin:12.5%;
       max-width: 75%; /* Allow cards to take the full width of the screen */
       margin-bottom: 2rem; /* Add some spacing between the stacked cards */
