--- a/css/hackprojects.css
+++ b/css/hackprojects.css
@@ -429,9 +429,21 @@
     box-sizing: inherit;
   }
   .certificate{
+    margin-left: -12rem;
     width: 45rem;
     height: 30rem;
     margin-bottom: 0;
+  }
+
+  .certificate_container h2{
+    margin-left: -12rem;
+  }
+
+  @media screen and (max-width:992px){
+    .certificate{
+      width: 40rem;
+      height: 25rem;
+    }
   }
   .prizes_container{
     display: flex;
@@ -464,30 +476,38 @@
 }
 	
 	.slide-track {
-		animation: scroll 30s linear infinite;
-    animation-delay: 0s;
+		animation: scroll 20s linear infinite !important;
+    animation-delay: 0s !important;
 		display: flex;
+    margin-left: 4rem;
 		flex-direction:column;
-		width: calc(100px * 14);
-    overflow: hidden!important;
+		width: calc(100px *4);
+    
     
 	}
   
   @keyframes scroll {
 	0% { transform: translateY(0); }
-	100% { transform: translateY(calc(-100px * 7))}
+  
+	100% { transform: translateY(-100px)}
 }
 
 	
 	.slide {
-		height: 100px;
-		width: 250px;
+		height: 85px;
+		width: 100px;
+    margin-top: 3rem !important;
 	}
 
+
+  .slide img{
+       background-size: cover;
+       
+  }
   .certificate:hover {
     display: inline-block;
     margin: 0 0.5rem;
-  
+  margin-left:-12rem;
     animation: swing; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 2s; /* don't forget to set a duration! */
   }
