--- a/css/hackprojects.css
+++ b/css/hackprojects.css
@@ -433,6 +433,9 @@
     width: 45rem;
     height: 30rem;
     margin-bottom: 0;
+    -webkit-box-shadow:0px 0px 25px 8px rgba(242,247,246,0.9);
+-moz-box-shadow: 0px 0px 25px 8px rgba(242,247,246,0.9);
+box-shadow: 0px 0px 25px 8px rgba(242,247,246,0.9);
   }
 
   .certificate_container h2{
@@ -441,16 +444,18 @@
 
   @media screen and (max-width:992px){
     .certificate{
-      width: 40rem;
+      width: 35rem;
       height: 25rem;
+      margin-right: 3rem;
     }
   }
   .prizes_container{
     display: flex;
     
     justify-content: space-around;
-    
+    flex-wrap: wrap;
     margin-left: 15rem;
+    
    
   }
   
@@ -552,4 +557,26 @@
       max-width: 75%; /* Allow cards to take the full width of the screen */
       margin-bottom: 2rem; /* Add some spacing between the stacked cards */
     }
+  }
+
+
+  .prize_container{
+    width: 43rem;
+    height: 32rem;
+    overflow: hidden;
+    margin-left: -5rem;
+}
+.prize_container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+ @media screen and (max-width:992px){
+    .prize_container{
+    margin-left: -12rem;
+      
+    }
+
+     
   }
